--- a/config.toml
+++ b/config.toml
@@ -52,11 +52,11 @@ enableGitInfo = false
 
   # Your details.
   name = "Lorenzo Masoero"
-  role = "PhD student"
+  role = "Applied Research Scientist"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "MIT, CSAIL, machine learning group", url = "http://machinelearning.mit.edu" } ]
+  organizations = [ { name = "Amazon" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
@@ -99,7 +99,7 @@ enableGitInfo = false
 
   # Color theme.
   #   Choose from `default`, `ocean`, `forest`, `dark`, `apogee`, `1950s`, `coffee`, `cupcake`.
-  color_theme = "default"
+  color_theme = "ocean"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
