--- a/config.toml
+++ b/config.toml
@@ -272,10 +272,10 @@ enableGitInfo = true
 
   # Link to a PDF of your resume/CV from the About widget.
   # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-   [[params.social]]
-     icon = "cv"
-     icon_pack = "ai"
-     link = "files/cv_masoero_2021.pdf"
+  # [[params.social]]
+  #   icon = "cv"
+  #   icon_pack = "ai"
+  #   link = "files/cv_masoero_2021.pdf"
 
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
