--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@
 baseurl = "/"
 
 # Title of your site
-title = ""
+title = "Lorenzo Masoero"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
@@ -52,7 +52,7 @@ enableGitInfo = true
 
   # Your details.
   name = "Lorenzo Masoero"
-  role = "Applied Research Scientist"
+  #role = "Applied Research Scientist"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
@@ -62,13 +62,13 @@ enableGitInfo = true
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
 
   # Details for the Contact Widget
-  email = "test@example.org"
-  address = "Building 1 Room 1, Stanford University, California, 90210, USA"
-  office_hours = "Monday 10:00 to 13:00 or email for appointment"
-  phone = "888 888 88 88"
-  skype = "echo123"
-  telegram = ""
-  keybase = ""  # Your keybase.io username.
+  email = "lo.masoero@gmail.com"
+  address = "Seattle, WA, USA"
+  #office_hours = "Monday 10:00 to 13:00 or email for appointment"
+  #phone = "888 888 88 88"
+  #skype = "echo123"
+  #telegram = ""
+  #keybase = ""  # Your keybase.io username.
 
   # Discussion link (e.g. link to a forum, mailing list, or chat).
   #   Uncomment line below to use.
@@ -99,7 +99,7 @@ enableGitInfo = true
 
   # Color theme.
   #   Choose from `default`, `ocean`, `forest`, `dark`, `apogee`, `1950s`, `coffee`, `cupcake`.
-  color_theme = "dark"
+  color_theme = "forest"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
@@ -109,7 +109,7 @@ enableGitInfo = true
   description = ""
 
   # Default image for social sharing and search engines. Place image in `static/img/` folder and specify image name here.
-  sharing_image = ""
+  sharing_image = "portrait.jpg"
 
   # Twitter username (without @). Used when a vistor shares your site on Twitter.
   twitter = ""
@@ -250,6 +250,25 @@ enableGitInfo = true
   #
   #   Full list: https://jpswalsh.github.io/academicons/
 
+  [[params.social]]
+    icon = "envelope"
+    icon_pack = "fas"
+    link = "#contact"  # For a direct email link, use "mailto:test@example.org".
+
+  [[params.social]]
+    icon = "github"
+    icon_pack = "fab"
+    link = "https://github.com/lorenzomasoero"
+
+  [[params.social]]
+    icon = "linkedin"
+    icon_pack = "fab"
+    link = "https://www.linkedin.com/in/lorenzomasoero"
+
+  [[params.social]]
+    icon = "google-scholar"
+    icon_pack = "ai"
+    link = "https://scholar.google.com/citations?user=qFFGfdYAAAAJ"
 
   # Link to a PDF of your resume/CV from the About widget.
   # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
