--- a/config.toml
+++ b/config.toml
@@ -56,7 +56,7 @@ enableGitInfo = true
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Amazon" } ]
+  organizations = [] #[ { name = "Amazon" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
@@ -253,7 +253,7 @@ enableGitInfo = true
   [[params.social]]
     icon = "envelope"
     icon_pack = "fas"
-    link = "#contact"  # For a direct email link, use "mailto:test@example.org".
+    link = "mailto:lo.masoero@gmail.com" #"#contact"  # For a direct email link, use "mailto:test@example.org".
 
   [[params.social]]
     icon = "github"
